2008-01-23  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs: Worked on code completion.

2008-01-23  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs: Worked on code completion.

2008-01-22  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor.Highlighting/SyntaxModeService.cs: Worked on style panel.

2008-01-22  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor.Highlighting/SyntaxModeService.cs: Worked on style panel.

2008-01-22  Mike Krüger <mkrueger@novell.com> 

	* OblivionStyle.xml, Mono.TextEditor.Highlighting/Style.cs, C64Style.xml:
	  Color styles now have descriptions. Name/Description is now localizable.

2008-01-22  Mike Krüger <mkrueger@novell.com> 

	* OblivionStyle.xml, Mono.TextEditor.Highlighting/Style.cs, C64Style.xml:
	  Color styles now have descriptions. Name/Description is now localizable.

2008-01-22  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs, Mono.TextEditor/TextEditorOptions.cs,
	  Mono.TextEditor/GutterMargin.cs: Added some text editor options -
	  options are now virtual.

2008-01-22  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs, Mono.TextEditor/TextEditorOptions.cs,
	  Mono.TextEditor/GutterMargin.cs: Added some text editor options -
	  options are now virtual.

2008-01-21  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor.mdp, Mono.TextEditor.mds: Added changelogs to the project
	  files.

2008-01-21  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditorData.cs, Mono.TextEditor/TextEditor.cs: Worked
	  on selection logic.
